# embed_proj

./: README.md
face_test/: camera_pins.h  face_test.ino
face_test/libraries/ESP_Mail_Client/: library.properties
face_test/libraries/ESP_Mail_Client/src/: ESP_Mail_Client.cpp  ESP_Mail_Client.h  ESP_Mail_Client_Version.h  ESP_Mail_FS.h
face_test/libraries/ESP_Mail_Client/src/extras/: SDK_Version_Common.h
face_test/libraries/MicroFlow/src/: MicroFlow.cpp  MicroFlow.h
face_test/libraries/libraries/ESP_Mail_Client/: library.json
face_test/libraries/libraries/ESP_Mail_Client/src/: ESP_Mail_Const.h  ESP_Mail_IMAP.h  ESP_Mail_SMTP.h
libraries/ESP-Mail-Client-master/: keywords.txt  library.properties
libraries/ESP-Mail-Client-master/examples/IMAP/ACL/: ACL.ino
libraries/ESP-Mail-Client-master/examples/IMAP/Custom_Ports/: Custom_Ports.ino
libraries/ESP-Mail-Client-master/src/: ESP_Mail_Error.h  ESP_Mail_FS.h  ESP_Mail_Print.h
libraries/ESP-Mail-Client-master/src/wcs/: ESP_TCP_Clients.h
libraries/ESP_Mail_Client/: library.json  library.properties
libraries/ESP_Mail_Client/src/: ESP_Mail_Client_Version.h  ESP_Mail_IMAP.h  README.md
libraries/ESP_Mail_Client/src/extras/: MB_FS_Interfaces.h  MB_Time.h
terminal/: CMakeLists.txt  sdkconfig  sdkconfig.old
terminal/components/lvgl_gui/: lv_conf.h  lvgl.c
terminal/components/modules/: CMakeLists.txt
terminal/components/modules/ai/: who_human_face_detection.cpp
terminal/components/modules/camera/: who_camera.c  who_camera.h
terminal/main/: CMakeLists.txt  app_lcd.cpp  app_main.cpp  app_screen.cpp
terminal/main/include/: app_lcd.h  app_screen.h  board_def.h
(+119 files in other folders)
